# oberon0c

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  afl.nix  compile_commands.json  config.h  default.nix  dependencies.nix  flake.nix  global.h  main.cpp
codegen/: CodeGen.cpp  CodeGen.h
parser/: Parser.cpp  Parser.h  SemanticChecker.cpp  SemanticChecker.h  SymbolTable.cpp  SymbolTable.h
parser/ast/: ASTContext.cpp  ASTContext.h  ActualParametersNode.h  AddOperatorNode.h  ArrayTypeNode.h  AssignmentNode.h  CaseLabelListNode.h  CaseLabelsNode.h  CaseStatementNode.h  ClauseNode.h  ConstDeclarationNode.h  DeclarationSequenceNode.cpp  DeclarationSequenceNode.h  DesignatorNode.h  ElementNode.h  ExitStatementNode.h  ExpressionNode.cpp  ExpressionNode.h  FPSectionNode.cpp  FPSectionNode.h  FactorNode.h  FormalParametersNode.h  FormalTypeNode.h  FunctionCallNode.h  IdentNode.cpp  IdentNode.h  IfStatementNode.h  ImportListNode.cpp  ImportListNode.h  ImportNode.cpp  ImportNode.h  LoopStatementNode.h  ModuleNode.cpp  ModuleNode.h  Node.cpp  Node.h  NodePrettyPrinter.cpp  NodePrettyPrinter.h  NodeVisitor.cpp  NodeVisitor.h  (+27 more)
scanner/: LiteralToken.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h
test/: 1-double-declaration.Mod  1-no-overloading.Mod  1.1-constants-constant.Mod  1.2-array-size-constant.Mod  1.5-procedures.Mod  2.2-comp-ops-bool.Mod  3-declare-before-use.Mod  3.1-array-index-out-of-bounds.Mod  3.2-procedure-calls.Mod  4.3-while-bool.Mod  Procedure.Mod  Record.Mod
tests/: parser_tests.cpp  symbol_table_tests.cpp
tests/code_gen/: code_gen_tests.cpp  init_llvm.cpp  init_llvm.h  literal_expression.cpp
tests/code_gen/resources/: .IfStatement.Mod.ll.swp  .WhileStatement.Mod.swp  IfStatement.Mod  Literal-Expressions.Mod
tests/codegen/: ArrayAssignment  ArrayAssignment.Mod  ArrayAssignment.smb  ArrayToArrayAssignment.Mod  ArrayToArrayAssignment.smb  RecordFieldAssignment.Mod  RecordFieldAssignment.smb  RecordToRecordAssignment.Mod  RecordToRecordAssignment.smb
tests/declaration_validity/: const_decl.cpp
tests/declaration_validity/const_decl/: ConstFold.Mod  ConstFoldSubst.Mod  NonConst1.Mod  Simple.Mod
tests/integration_tests/: assignment_tests.cpp  ident_expression_tests.cpp  if_tests.cpp  procedure_call_tests.cpp  procedure_decl_tests.cpp  setup_mcjit.h  sort0_test.cpp  while_tests.cpp
tests/integration_tests/resources/: Assignment.Mod  BuiltinWriteInt.Mod  EmptyProcedureCall.Mod  Ident-Expression.Mod  IfElseStatement.Mod  IfElsifElseStatement.Mod  IfStatement.Mod  NestedIfStatements.Mod  ProcedureCall.Mod  ProcedureDeclaration.Mod  Sort0.Mod  WhileStatement.Mod
tests/parser/: parser_tests.cpp
tests/parser/resources/: Boolean-Literal.Mod
tests/resources/: 1-no-overloading.Mod  1.1-constants-constant.Mod  1.3-record-scope.Mod  1.4-var-type-exists.Mod  2.1-arith-ops-int.Mod  2.3-bool-ops-bool.Mod  3-declare-before-use.Mod  3.1-record-field-existence.Mod  3.2-consts-not-var.Mod  4.1-assignments.Mod  4.2-if.Mod  Array.Mod  GCD.Mod  Missing-Semicolon.Mod  Multiple-Errors.Mod  Procedure.Mod  Record.Mod  Sort0.Mod  Wrong-Array.Mod  Wrong.Mod
tests/semantic_checker/: const_decl.cpp  expression.cpp  ident_use_tests.cpp  symbol_table_tests.cpp  type.cpp
